<resources>
    <string name="app_name">Playlist maker</string>
    <string name="textOfFindButton">Поиск</string>
    <string name="textOfMediaButton">Медиатека</string>
    <string name="textOfSettingsButton">Настройки</string>
    <string name="darkThemeText">Тёмная тема</string>
    <string name="shareAppText">Поделиться приложением</string>
    <string name="userAgreementText">Пользовательское соглашение</string>
    <string name="supportText">Написать в поддержку</string>
    <string name="linkInsideShareButton">https://practicum.yandex.ru/</string>
    <string name="supportLetterSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportLetterText">Привет, Android разработка — это круто!</string>
    <string name="supportLetterAddressee">Vozzhd@yandex.ru</string>
    <string name="linkToTermsOfUse">https://yandex.ru/legal/practicum_offer/</string>
    <string name="hintInFindTextView">Поиск</string>
    <string name="hintInShareWindow">share by:</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="defaultTrackTime">"--:--"</string>
    <string name="refreshButton">Обновить</string>
    <string name="clearHistoryButtonText">Очистить историю</string>
    <string name="historyViewTitleText">Вы искали</string>
    <string name="trackDuration" />
    <string name="songName">Название трека</string>
    <string name="albumName">Название альбома</string>
    <string name="elapsedTrackTime">0:00</string>
    <string name="albumReleaseYear" />
    <string name="albumGenre" />
    <string name="trackReleaseCountry" />
    <string name="trackDurationText">Длительность</string>
    <string name="albumNameText">Название альбома</string>
    <string name="trackReleaseYearText">Год</string>
    <string name="trackGenreText">Жанр</string>
    <string name="trackReleaseCountryText">Страна</string>
    <string name="searchTrackDebounce">2000L</string>
    <string name="defaultElapsedTrackTimeVisu">00:00</string>
    <string name="checkInternetConnection">Проверьте подключение к интернету</string>
    <string name="internetError">Произошла ошибка сети</string>
    <string name="newPlaylist">Новый плейлист</string>
    <string name="PlaylistsAreEmpty">Вы не создали \n ни одного плейлиста</string>
    <string name="mediaLibraryIsEmpty">Ваша медиатека пуста</string>
    <string name="mediaLibraryText">Медиатека</string>
    <string name="favoriteTracks">Избранные треки</string>
    <string name="Playlists">Плейлисты</string>
    <string name="searchTextBottomView">Поиск</string>
    <string name="mediaLibraryRextBottomView">Медиатека</string>
    <string name="settingsTextBottomView">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_playList">Добавить в плейлист</string>
    <string name="new_album">Новый плейлист</string>
    <string name="finishCreatingPlaylist">Завершить создание плейлиста?</string>
    <string name="unsavedDataWillBeLost">Все несохранённые данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="playlist_name">Название*</string>
    <string name="new_playlist_frame_title">Новый плейлист</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="singleTrackEnding">трек</string>
    <string name="fromTwoToFourTrackEnding">трека</string>
    <string name="severalTrackEnding">треков</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="track_added_yet">Трек уже добавлен в плейлист</string>
    <string name="fromTwoToFourMinutesEnding">минуты</string>
    <string name="singleMinuteEnding">минута</string>
    <string name="severalMinuteEnding">минут</string>
    <string name="deletingTrackFromPlaylist">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="no">нет</string>
    <string name="yes">да</string>
    <string name="sharePlaylistIsEmpty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="sharePlaylist">Поделиться</string>
    <string name="editPlaylistInfo">Редактировать информацию</string>
    <string name="deletePlaylist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="deletingPlaylistFromTable">Хотите удалить плейлист</string>
</resources>