<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Base.Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"

    android:paddingHorizontal="16dp">
    <!--View с текстом Playlist maker-->
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:paddingBottom="28dp"

        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/YP_white"
        android:textSize="@dimen/defaultTextSizeForTitle" />

    <!--Первая кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/findButton"
        style="@style/bigButton"
        android:text="@string/textOfFindButton"
        app:icon="@drawable/magnifier" />

    <!--Вторая кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/libraryButton"
        style="@style/bigButton"
        android:text="@string/textOfMediaButton"
        app:icon="@drawable/noteicon" />

    <!--Третья кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        style="@style/bigButton"
        android:text="@string/textOfSettingsButton"
        app:icon="@drawable/gearicon" />

</LinearLayout>


