<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/defaultMargin"
        android:gravity="center_vertical">


        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/textOfSettingsButton" />

    </LinearLayout>

    <FrameLayout
        style="@style/FrameLayoutSettingActivity"
        android:layout_marginEnd="6dp"
        android:layout_marginTop="24dp"
        >

        <TextView
            style="@style/RegularTextView"
            android:text="@string/darkThemeText" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareButton"
        style="@style/FrameLayoutSettingActivity">

        <TextView
            style="@style/RegularTextView"
            android:text="@string/shareAppText" />

        <ImageView
            style="@style/RegularImageSmallView"
            android:src="@drawable/shareicon" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportButton"
        style="@style/FrameLayoutSettingActivity">

        <TextView
            style="@style/RegularTextView"
            android:text="@string/supportText" />

        <ImageView
            style="@style/RegularImageSmallView"
            android:src="@drawable/supporticon" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/userAgreementButton"
        style="@style/FrameLayoutSettingActivity">

        <TextView
            style="@style/RegularTextView"
            android:text="@string/userAgreementText" />

        <ImageView
            style="@style/RegularImageSmallView"
            android:src="@drawable/quotright" />

    </FrameLayout>

</LinearLayout>