<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/defaultMargin"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/defaultIconSize"
            android:layout_height="@dimen/defaultIconSize"

            android:background="@color/transparent"
            android:src="@drawable/leftarrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="-2dp"

            android:text="@string/textOfSettingsButton"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingsLineHeight"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="6dp"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"

            android:text="@string/darkThemeText"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/defaultTextSizeSettings" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingsLineHeight"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="12dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"

            android:text="@string/shareAppText"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/defaultTextSizeSettings" />


        <ImageView
            android:layout_width="@dimen/defaultIconSize"
            android:layout_height="@dimen/defaultIconSize"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/shareicon" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingsLineHeight"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="12dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"

            android:text="@string/supportText"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/defaultTextSizeSettings" />


        <ImageView
            android:layout_width="@dimen/defaultIconSize"
            android:layout_height="@dimen/defaultIconSize"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/supporticon" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settingsLineHeight"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"

            android:text="@string/userAgreementText"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/defaultTextSizeSettings" />
        <ImageView
            android:layout_width="@dimen/defaultIconSize"
            android:layout_height="@dimen/defaultIconSize"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/quotright" />


    </FrameLayout>
</LinearLayout>